--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css">
 
     <!-- hamburger navs -->
-    <link rel="stylesheet" href="/css/hamburgers.css">
+    <link rel="stylesheet" href="./css/hamburgers.css">
 
     <!-- fancybox -->
     <link rel="stylesheet" href="./vendor/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
