--- a/thanks.html
+++ b/thanks.html
@@ -52,7 +52,7 @@
 
 
         <div class="thanks jumbotron jumbotron-fluid">
-          <h1 class="thanks">Thanks, your burger is on it's way</h1>
+          <h1 class="thanks">Thanks, your burger is on its way</h1>
 
 
 
